// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DropdownToggleAction should match snapshot (auto-generated) 1`] = `
<button
  aria-label="string"
  className="pf-c-dropdown__toggle-button ''"
  id="string"
  onClick={[Function]}
>
  <div>
    ReactNode
  </div>
</button>
`;

exports[`isDisabled 1`] = `
<button
  aria-disabled={true}
  aria-label="action"
  className="pf-c-dropdown__toggle-button"
  disabled={true}
  id="action"
  onClick={[Function]}
/>
`;

exports[`passing class 1`] = `
<button
  aria-label="action"
  className="pf-c-dropdown__toggle-button abc"
  id="action"
  onClick={[Function]}
/>
`;

exports[`renders with text 1`] = `
<button
  aria-label="action"
  className="pf-c-dropdown__toggle-button"
  id="action"
  onClick={[Function]}
/>
`;
